Fix overflowed nicknames and emails on user page.
Long nicknames and emails overflowed outside the left-navigation box on the user
page. This css fix forces long nicknames and emails to break into the next line.

Tested in Chrome. Should work with most browsers except opera.
See: http://www.w3schools.com/cssref/css3_pr_word-break.asp

Reviewed at http://reviews.reviewboard.org/r/3397/

--- a/reviewboard/static/rb/css/dashboard.less
+++ b/reviewboard/static/rb/css/dashboard.less
@@ -42,6 +42,7 @@
 
   td {
     padding: 5px 8px;
+    word-break: break-all;
 
     img {
       vertical-align: bottom;
